--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -66,7 +66,7 @@ images:
   - 'gcr.io/$PROJECT_ID/earlybirds-frontend'
 
 substitutions:
-  _BACKEND_URL: 'https://replace-with-your-backend-url.a.run.app'
+  _BACKEND_URL: 'https://earlybirds-backend-418660309017.us-central1.run.app'
 
 options:
   logging: CLOUD_LOGGING_ONLY
